--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,18 @@
 body {
   display: flex;
   background-color: palevioletred;
-  width: 100vw;
-  height: 100vh;
   align-items: center;
   justify-content: center;
 
 }
 
 
+/* play-area */
+
+.play-area {
+  display: flex;
+  align-items: center;
+}
 
 
 
@@ -47,3 +51,40 @@ body {
     transform: rotate(360deg);
   }
 }
+
+
+
+
+/* board? */
+
+
+.card-board {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-areas: ". . . ." ". . . ." ". . . ." ". . . .";
+  width: 500px;
+  height: 500px;
+  border: 1px solid black;
+  margin: 0 20px;
+}
+
+.card-board-space {
+  border: 1px solid black;
+  flex-basis: 25%;
+}
+
+.card-board-blocker {
+  background-color: slategray;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-bottom: 4px solid #8fa3b7;
+  border-right: 4px solid #8fa3b7;
+  border-top: 4px solid #48525d;
+  border-left: 4px solid #48525d;
+  box-sizing: border-box;
+}
+
+
+
