--- a/src/Card.css
+++ b/src/Card.css
@@ -1,5 +1,5 @@
 .card {
-   background: no-repeat center/contain url(https://picsum.photos/id/884/125/125);
+   background: no-repeat center/contain url(https://picsum.photos/125);
    /* background-color: blue; */
    height: 125px;
    width: 125px;
@@ -18,6 +18,8 @@
    box-sizing: border-box;
      -moz-box-sizing: border-box;
      -webkit-box-sizing: border-box;
+
+     transform: translate3d(0, 0, 0); /* fixes dragPreview being inaccurate in Chrome */
  }
 
 
@@ -57,14 +59,14 @@
 //    |
 */
 
-.arrow-top-left {
+.arrow-tl {
    border-width: 12px 12px 0 0;
    border-color: var(--arrow-color) transparent transparent transparent;
    position: absolute;
    left: -5px;
    top: -5px;
  }
-   .arrow-top-left > span {
+   .arrow-tl > span {
      left: 7px;
      top: -7px;
    }
@@ -76,7 +78,7 @@
 //     /\
 //    /  \
 */
-.arrow-top {
+.arrow-t {
    border-style: solid;
    border-width: 0 7.5px 8px 7.5px;
    border-color: transparent transparent var(--arrow-color) transparent;
@@ -87,7 +89,7 @@
    right: 0;
    top: -8px;
  }
-   .arrow-top > span {
+   .arrow-t > span {
      top: 7px;
    }
 
@@ -98,14 +100,14 @@
 //     __
 //       |
 */
-.arrow-top-right {
+.arrow-tr {
    border-width: 12px 0 0 12px;
    border-color: var(--arrow-color) transparent transparent transparent;
    position: absolute;
    right: -5px;
    top: -5px;
  }
-   .arrow-top-right > span {
+   .arrow-tr > span {
      right: 7px;
      top: -7px;
    }
@@ -113,36 +115,36 @@
 
 
 /*
-//    Left
+//    Middle Left
 //     /
 //     \
 */
-.arrow-left {
+.arrow-ml {
    border-width: 7.5px 8px 7.5px 0px;
    border-color: transparent var(--arrow-color) transparent transparent;
    align-self: center;
    position: absolute;
    left: -8px;
  }
-   .arrow-left > span {
+   .arrow-ml > span {
      left: 12px;
    }
  
 
 
 /*
-//    Right
+//    Middle Right
 //     \
 //     /
 */
-.arrow-right {
+.arrow-mr {
    border-width: 7.5px 0 7.5px 8px;
    border-color: transparent transparent transparent var(--arrow-color);
    align-self: center;
    position: absolute;
    right: -8px;
  }
-   .arrow-right > span {
+   .arrow-mr > span {
      right: 11px;
    }
 
@@ -153,14 +155,14 @@
 //    |
 //     --
 */
-.arrow-bottom-left {
+.arrow-bl {
    border-width: 0 12px 12px 0;
    border-color: transparent transparent var(--arrow-color) transparent;
    position: absolute;
    left: -5px;
    bottom: -5px;
  }
-   .arrow-bottom-left > span {
+   .arrow-bl > span {
      left: 7px;
      bottom: -7px;
    }
@@ -171,7 +173,7 @@
 //    \  /
 //     \/
 */
-.arrow-bottom {
+.arrow-b {
    border-style: solid;
    border-width: 8px 7.5px 0 7.5px;
    border-color: var(--arrow-color) transparent transparent transparent;
@@ -182,7 +184,7 @@
    right: 0;
    bottom: -8px;
  }
-   .arrow-bottom > span {
+   .arrow-b > span {
      bottom: 7px;
    }
 
@@ -192,14 +194,14 @@
 //       |
 //     --
 */
-.arrow-bottom-right {
+.arrow-br {
    border-width: 0 0 12px 12px;
    border-color:  transparent transparent var(--arrow-color) transparent;
    position: absolute;
    right: -5px;
    bottom: -5px;
  }
-   .arrow-bottom-right > span {
+   .arrow-br > span {
      right: 7px;
      bottom: -7px;
    }
