--- a/src/Card.css
+++ b/src/Card.css
@@ -14,7 +14,7 @@
    
    position: relative;
    border-radius: 2px;
-   border: 5px solid goldenrod;
+   border: 7px solid goldenrod;
    box-sizing: border-box;
      -moz-box-sizing: border-box;
      -webkit-box-sizing: border-box;
@@ -34,7 +34,9 @@
    height: 100%;
    box-sizing: border-box;
    display: flex;
+   border: 1px solid #444;
  }
+ 
  
  
 
@@ -51,6 +53,7 @@
      position: absolute;
      color: white;
      font-weight: 600;
+     text-shadow: 0px 0px 1px #000, 0px 0px 2px #000;
    }
  
 /*
@@ -60,15 +63,15 @@
 */
 
 .arrow-tl {
-   border-width: 12px 12px 0 0;
+   border-width: 11px 11px 0 0;
    border-color: var(--arrow-color) transparent transparent transparent;
    position: absolute;
-   left: -5px;
-   top: -5px;
+   left: -7px;
+   top: -7px;
  }
    .arrow-tl > span {
-     left: 7px;
-     top: -7px;
+     left: 9px;
+     top: -4px;
    }
 
  
@@ -80,14 +83,14 @@
 */
 .arrow-t {
    border-style: solid;
-   border-width: 0 7.5px 8px 7.5px;
+   border-width: 0 7px 7px 7px;
    border-color: transparent transparent var(--arrow-color) transparent;
    justify-self: center;
    margin: 0 auto;
    position: absolute;
    left: 0;
    right: 0;
-   top: -8px;
+   top: -7px;
  }
    .arrow-t > span {
      top: 7px;
@@ -101,15 +104,15 @@
 //       |
 */
 .arrow-tr {
-   border-width: 12px 0 0 12px;
+   border-width: 11px 0 0 11px;
    border-color: var(--arrow-color) transparent transparent transparent;
    position: absolute;
-   right: -5px;
-   top: -5px;
+   right: -7px;
+   top: -7px;
  }
    .arrow-tr > span {
-     right: 7px;
-     top: -7px;
+     right: 9px;
+     top: -4px;
    }
 
 
@@ -120,14 +123,14 @@
 //     \
 */
 .arrow-ml {
-   border-width: 7.5px 8px 7.5px 0px;
+   border-width: 7px 7px 7px 0px;
    border-color: transparent var(--arrow-color) transparent transparent;
    align-self: center;
    position: absolute;
-   left: -8px;
+   left: -7px;
  }
    .arrow-ml > span {
-     left: 12px;
+     left: 10px;
    }
  
 
@@ -138,11 +141,11 @@
 //     /
 */
 .arrow-mr {
-   border-width: 7.5px 0 7.5px 8px;
+   border-width: 7px 0 7px 7px;
    border-color: transparent transparent transparent var(--arrow-color);
    align-self: center;
    position: absolute;
-   right: -8px;
+   right: -7px;
  }
    .arrow-mr > span {
      right: 11px;
@@ -156,15 +159,15 @@
 //     --
 */
 .arrow-bl {
-   border-width: 0 12px 12px 0;
+   border-width: 0 11px 11px 0;
    border-color: transparent transparent var(--arrow-color) transparent;
    position: absolute;
-   left: -5px;
-   bottom: -5px;
+   left: -7px;
+   bottom: -7px;
  }
    .arrow-bl > span {
-     left: 7px;
-     bottom: -7px;
+     left: 9px;
+     bottom: -4px;
    }
 
 
@@ -175,14 +178,14 @@
 */
 .arrow-b {
    border-style: solid;
-   border-width: 8px 7.5px 0 7.5px;
+   border-width: 7px 7px 0 7px;
    border-color: var(--arrow-color) transparent transparent transparent;
    justify-self: center;
    margin: 0 auto;
    position: absolute;
    left: 0;
    right: 0;
-   bottom: -8px;
+   bottom: -7px;
  }
    .arrow-b > span {
      bottom: 7px;
@@ -195,13 +198,13 @@
 //     --
 */
 .arrow-br {
-   border-width: 0 0 12px 12px;
+   border-width: 0 0 11px 11px;
    border-color:  transparent transparent var(--arrow-color) transparent;
    position: absolute;
-   right: -5px;
-   bottom: -5px;
+   right: -7px;
+   bottom: -7px;
  }
    .arrow-br > span {
-     right: 7px;
-     bottom: -7px;
+     right: 9px;
+     bottom: -4px;
    }
