--- a/src/App.css
+++ b/src/App.css
@@ -88,8 +88,23 @@ body {
 
 
 
+/* Card Holder */
+
+.card-holder-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-holder {
+  border: 1px solid black;
+  padding: 1px
+}
+
+
 .card-slot {
   border: 1px solid black;
   padding: 1px;
   margin-bottom: 1px;
 }
+
+
