--- a/src/Card.css
+++ b/src/Card.css
@@ -1,9 +1,20 @@
 /* vars for the arrows */
 :root {
-  --arrow-color: #007bff;
-  --border-color: goldenrod;
+  --arrow-color: goldenrod;
+  --arrow-color: #F9BD8D;
+
+  --p1-border-color: rgb(11, 6, 139);
+  --p1-bg-color:  rgba(11, 6, 139, 0.3);
+
+  --p2-border-color: rgb(139, 6, 11);
+  --p2-bg-color:  rgba(139, 6, 11, 0.3);
 }
 
+/*
+Original arrow / border colors
+--arrow-color: #007bff;
+--border-color: goldenrod;
+*/
 
 
 .card {
@@ -21,12 +32,24 @@
    flex-direction: column;
    
    position: relative;
-   border: 5px solid var(--border-color);
+   /* border: 5px solid var(--border-color); */
+   border-width: 5px;
+   border-style: solid;
+   /* border-color is below */
    box-sizing: border-box;
      -moz-box-sizing: border-box;
      -webkit-box-sizing: border-box;
 
      transform: translate3d(0, 0, 0); /* fixes dragPreview being inaccurate in Chrome */
+ }
+
+ /* define owner for purpose of coloring bg and border */
+ .card-p1 {
+  border-color: var(--p1-border-color);
+ }
+
+ .card-p2 {
+  border-color: var(--p2-border-color);
  }
 
 
@@ -47,12 +70,12 @@
   transition: background-color 500ms ease-in-out;
  }
  
-  .p1-color {
-    background-color: rgba(11, 6, 139, 0.3);
+  .card-p1 .card-color {
+    background-color: var(--p1-bg-color);
   }
 
-  .p2-color {
-    background-color: rgba(139, 6, 11, 0.3);
+  .card-p2 .card-color {
+    background-color: var(--p2-bg-color);
   }
 
  
