--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,12 @@ body {
   box-sizing: border-box;
 }
 
+.card-board-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 
 /* Card Holder */
