--- a/src/Card.css
+++ b/src/Card.css
@@ -1,7 +1,11 @@
 /* vars for the arrows */
 :root {
+  --arrow-color: #ffedba;
+  
+  /* 
   --arrow-color: goldenrod;
   --arrow-color: #F9BD8D;
+  */
 
   --p1-border-color: rgb(11, 6, 139);
   --p1-bg-color:  rgba(11, 6, 139, 0.3);
@@ -30,9 +34,8 @@ Original arrow / border colors
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
-   
+   transition: border-color 500ms ease-in-out;
    position: relative;
-   /* border: 5px solid var(--border-color); */
    border-width: 5px;
    border-style: solid;
    /* border-color is below */
