--- a/src/App.css
+++ b/src/App.css
@@ -63,10 +63,11 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-areas: ". . . ." ". . . ." ". . . ." ". . . .";
-  width: 500px;
+  width: 510px;
   height: 500px;
   border: 1px solid black;
   margin: 0 20px;
+  box-sizing: border-box;
 }
 
 .card-board-space {
@@ -111,6 +112,8 @@ body {
   border: 1px solid black;
   padding: 1px;
   margin-bottom: 1px;
+  min-height: 125px;
+  min-width: 125px;
 }
 
 
