--- a/src/Card.css
+++ b/src/Card.css
@@ -3,15 +3,67 @@
   --arrow-color: #ffedba;
   
   /* 
+  
   --arrow-color: goldenrod;
   --arrow-color: #F9BD8D;
   */
 
-  --p1-border-color: rgb(11, 6, 139);
+  
+
+
+ 
+
+  
+  
+  --p1-border-color: rgb(92, 174, 218); 
+  --p1-bg-color:  rgba(92, 174, 218, 0.3);
+
+  /* --p1-border-color: rgb(122, 206, 232); 
+  --p1-bg-color:  rgba(122, 206, 232, 0.3); */
+
+  --p2-border-color: rgb(217, 100, 103);
+  --p2-bg-color:  rgba(217, 100, 103, 0.3);
+
+
+
+  
+  /* --p1-border-color: rgb(104, 25, 74); 
+  --p1-bg-color:  rgba(104, 25, 74, 0.3);
+
+  --p2-border-color: rgb(17, 82, 85);
+  --p2-bg-color:  rgba(17, 82, 85, 0.3); */
+
+  
+
+  /* --p1-border-color: rgb(64, 164, 218); 
+  --p1-bg-color:  rgba(64, 164, 218, 0.3);
+
+  --p2-border-color: rgb(202, 48, 74);
+  --p2-bg-color:  rgba(202, 48, 74, 0.3); */
+
+
+
+  /* --p1-border-color: rgb(135, 205, 202); 
+  --p1-bg-color:  rgba(135, 205, 202, 0.3);
+
+  --p2-border-color: rgb(224, 125, 99);
+  --p2-bg-color:  rgba(224, 125, 99, 0.3); */
+
+
+
+  /* --p1-border-color: rgb(98, 218, 150);
+  --p1-bg-color:  rgba(98, 218, 150, 0.2);
+
+  --p2-border-color: rgb(9, 58, 105);
+  --p2-bg-color:  rgba(9, 58, 105, 0.2); */
+
+
+
+  /* --p1-border-color: rgb(11, 6, 139);
   --p1-bg-color:  rgba(11, 6, 139, 0.3);
 
   --p2-border-color: rgb(139, 6, 11);
-  --p2-bg-color:  rgba(139, 6, 11, 0.3);
+  --p2-bg-color:  rgba(139, 6, 11, 0.3); */
 }
 
 /*
