--- a/src/Card.css
+++ b/src/Card.css
@@ -1,39 +1,27 @@
 /* vars for the arrows */
 :root {
   --arrow-color: #ffedba;
-  
+
   /* 
   
   --arrow-color: goldenrod;
   --arrow-color: #F9BD8D;
   */
 
-  
-
-
- 
-
-  
-  
-  --p1-border-color: rgb(92, 174, 218); 
-  --p1-bg-color:  rgba(92, 174, 218, 0.3);
+  --p1-border-color: rgb(92, 174, 218);
+  --p1-bg-color: rgba(92, 174, 218, 0.3);
 
   /* --p1-border-color: rgb(122, 206, 232); 
   --p1-bg-color:  rgba(122, 206, 232, 0.3); */
 
   --p2-border-color: rgb(217, 100, 103);
-  --p2-bg-color:  rgba(217, 100, 103, 0.3);
+  --p2-bg-color: rgba(217, 100, 103, 0.3);
 
-
-
-  
   /* --p1-border-color: rgb(104, 25, 74); 
   --p1-bg-color:  rgba(104, 25, 74, 0.3);
 
   --p2-border-color: rgb(17, 82, 85);
   --p2-bg-color:  rgba(17, 82, 85, 0.3); */
-
-  
 
   /* --p1-border-color: rgb(64, 164, 218); 
   --p1-bg-color:  rgba(64, 164, 218, 0.3);
@@ -41,23 +29,17 @@
   --p2-border-color: rgb(202, 48, 74);
   --p2-bg-color:  rgba(202, 48, 74, 0.3); */
 
-
-
   /* --p1-border-color: rgb(135, 205, 202); 
   --p1-bg-color:  rgba(135, 205, 202, 0.3);
 
   --p2-border-color: rgb(224, 125, 99);
   --p2-bg-color:  rgba(224, 125, 99, 0.3); */
 
-
-
   /* --p1-border-color: rgb(98, 218, 150);
   --p1-bg-color:  rgba(98, 218, 150, 0.2);
 
   --p2-border-color: rgb(9, 58, 105);
   --p2-bg-color:  rgba(9, 58, 105, 0.2); */
-
-
 
   /* --p1-border-color: rgb(11, 6, 139);
   --p1-bg-color:  rgba(11, 6, 139, 0.3);
@@ -72,87 +54,83 @@ Original arrow / border colors
 --border-color: goldenrod;
 */
 
-
 .card {
-   background: no-repeat center/contain url(https://picsum.photos/125);
-   /* background-color: blue; */
-   height: 125px;
-   width: 125px;
-   cursor: pointer;
-   display: -webkit-box;
-   display: -ms-flexbox;
-   display: flex;
-   -webkit-box-orient: vertical;
-   -webkit-box-direction: normal;
-   -ms-flex-direction: column;
-   flex-direction: column;
-   transition: border-color 500ms ease-in-out;
-   position: relative;
-   border-width: 5px;
-   border-style: solid;
-   /* border-color is below */
-   box-sizing: border-box;
-     -moz-box-sizing: border-box;
-     -webkit-box-sizing: border-box;
+  background: no-repeat center/contain url(https://picsum.photos/125);
+  /* background-color: blue; */
+  height: 125px;
+  width: 125px;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  transition: border-color 500ms ease-in-out;
+  position: relative;
+  border-width: 5px;
+  border-style: solid;
+  /* border-color is below */
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 
-     transform: translate3d(0, 0, 0); /* fixes dragPreview being inaccurate in Chrome */
- }
+  transform: translate3d(
+    0,
+    0,
+    0
+  ); /* fixes dragPreview being inaccurate in Chrome */
+}
 
- /* define owner for purpose of coloring bg and border */
- .card-p1 {
+/* define owner for purpose of coloring bg and border */
+.card-p1 {
   border-color: var(--p1-border-color);
- }
+}
 
- .card-p2 {
+.card-p2 {
   border-color: var(--p2-border-color);
- }
+}
 
+.arrow-container {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  border: 1px solid #444;
+}
 
-
- .arrow-container {
-   width: 100%;
-   height: 100%;
-   box-sizing: border-box;
-   display: flex;
-   border: 1px solid #444;
- }
- 
-
- /* overlay color depending on player owner */
- .card-color{
+/* overlay color depending on player owner */
+.card-color {
   width: 100%;
   height: 100%;
   transition: background-color 500ms ease-in-out;
- }
- 
-  .card-p1 .card-color {
-    background-color: var(--p1-bg-color);
-  }
+}
 
-  .card-p2 .card-color {
-    background-color: var(--p2-bg-color);
-  }
+.card-p1 .card-color {
+  background-color: var(--p1-bg-color);
+}
 
- 
- 
- 
+.card-p2 .card-color {
+  background-color: var(--p2-bg-color);
+}
 
- /* shared styles for all arrow and arrow numbers */
- .arrow {
-   width: 0;
-   height: 0;
-   border-style: solid;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   }
-   .arrow > span {
-     position: absolute;
-     color: white;
-     font-weight: 600;
-     text-shadow: 0px 0px 1px #000, 0px 0px 2px #000;
-   }
- 
+/* shared styles for all arrow and arrow numbers */
+.arrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.arrow-num {
+  position: absolute;
+  color: white;
+  font-weight: 600;
+  text-shadow: 0px 0px 1px #000, 0px 0px 2px #000;
+}
+
 /*
 //    Top Left
 //     __
@@ -160,59 +138,56 @@ Original arrow / border colors
 */
 
 .arrow-tl {
-   border-width: 9px 9px 0 0;
-   border-color: var(--arrow-color) transparent transparent transparent;
-   position: absolute;
-   left: -5px;
-   top: -5px;
- }
-   .arrow-tl > span {
-     left: 8px;
-     top: -4px;
-   }
+  border-width: 9px 9px 0 0;
+  border-color: var(--arrow-color) transparent transparent transparent;
+  position: absolute;
+  left: -5px;
+  top: -5px;
+}
+.arrow-tl-num {
+  left: 4px;
+  top: 0px;
+}
 
- 
- 
 /*
 //    Top 
 //     /\
 //    /  \
 */
 .arrow-t {
-   border-style: solid;
-   border-width: 0 6px 5px 6px;
-   border-color: transparent transparent var(--arrow-color) transparent;
-   justify-self: center;
-   margin: 0 auto;
-   position: absolute;
-   left: 0;
-   right: 0;
-   top: -5px;
- }
-   .arrow-t > span {
-     top: 5px;
-   }
+  border-style: solid;
+  border-width: 0 6px 5px 6px;
+  border-color: transparent transparent var(--arrow-color) transparent;
+  justify-self: center;
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -5px;
+}
+.arrow-t-num {
+  top: 0px;
+  justify-self: center;
+  left: 0;
+  right: 0;
+}
 
- 
- 
 /*
 //    Top Right
 //     __
 //       |
 */
 .arrow-tr {
-   border-width: 9px 0 0 9px;
-   border-color: var(--arrow-color) transparent transparent transparent;
-   position: absolute;
-   right: -5px;
-   top: -5px;
- }
-   .arrow-tr > span {
-     right: 8px;
-     top: -4px;
-   }
-
-
+  border-width: 9px 0 0 9px;
+  border-color: var(--arrow-color) transparent transparent transparent;
+  position: absolute;
+  right: -5px;
+  top: -5px;
+}
+.arrow-tr-num {
+  right: 3px;
+  top: 0px;
+}
 
 /*
 //    Middle Left
@@ -220,17 +195,16 @@ Original arrow / border colors
 //     \
 */
 .arrow-ml {
-   border-width: 6px 5px 6px 0px;
-   border-color: transparent var(--arrow-color) transparent transparent;
-   align-self: center;
-   position: absolute;
-   left: -5px;
- }
-   .arrow-ml > span {
-     left: 8px;
-   }
- 
-
+  border-width: 6px 5px 6px 0px;
+  border-color: transparent var(--arrow-color) transparent transparent;
+  align-self: center;
+  position: absolute;
+  left: -5px;
+}
+.arrow-ml-num {
+  left: 4px;
+  align-self: center;
+}
 
 /*
 //    Middle Right
@@ -238,17 +212,16 @@ Original arrow / border colors
 //     /
 */
 .arrow-mr {
-   border-width: 6px 0 6px 5px;
-   border-color: transparent transparent transparent var(--arrow-color);
-   align-self: center;
-   position: absolute;
-   right: -5px;
- }
-   .arrow-mr > span {
-     right: 7px;
-   }
-
-
+  border-width: 6px 0 6px 5px;
+  border-color: transparent transparent transparent var(--arrow-color);
+  align-self: center;
+  position: absolute;
+  right: -5px;
+}
+.arrow-mr-num {
+  right: 2px;
+  align-self: center;
+}
 
 /*
 //    Bottom Left
@@ -256,17 +229,16 @@ Original arrow / border colors
 //     --
 */
 .arrow-bl {
-   border-width: 0 9px 9px 0;
-   border-color: transparent transparent var(--arrow-color) transparent;
-   position: absolute;
-   left: -5px;
-   bottom: -5px;
- }
-   .arrow-bl > span {
-     left: 8px;
-     bottom: -4px;
-   }
-
+  border-width: 0 9px 9px 0;
+  border-color: transparent transparent var(--arrow-color) transparent;
+  position: absolute;
+  left: -5px;
+  bottom: -5px;
+}
+.arrow-bl-num {
+  left: 5px;
+  bottom: 1px;
+}
 
 /*
 //   Bottom 
@@ -274,20 +246,22 @@ Original arrow / border colors
 //     \/
 */
 .arrow-b {
-   border-style: solid;
-   border-width: 5px 6px 0 6px;
-   border-color: var(--arrow-color) transparent transparent transparent;
-   justify-self: center;
-   margin: 0 auto;
-   position: absolute;
-   left: 0;
-   right: 0;
-   bottom: -5px;
- }
-   .arrow-b > span {
-     bottom: 5px;
-   }
-
+  border-style: solid;
+  border-width: 5px 6px 0 6px;
+  border-color: var(--arrow-color) transparent transparent transparent;
+  justify-self: center;
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -5px;
+}
+.arrow-b-num {
+  bottom: 1px;
+  justify-self: center;
+  left: 0;
+  right: 0;
+}
 
 /*
 //    Bottom Right
@@ -295,39 +269,39 @@ Original arrow / border colors
 //     --
 */
 .arrow-br {
-   border-width: 0 0 9px 9px;
-   border-color:  transparent transparent var(--arrow-color) transparent;
-   position: absolute;
-   right: -5px;
-   bottom: -5px;
- }
-   .arrow-br > span {
-     right: 8px;
-     bottom: -4px;
-   }
+  border-width: 0 0 9px 9px;
+  border-color: transparent transparent var(--arrow-color) transparent;
+  position: absolute;
+  right: -5px;
+  bottom: -5px;
+}
+.arrow-br-num {
+  right: 2px;
+  bottom: 1px;
+}
 
-
-
-  /* 
+/* 
     Animation testing 
   */
+.stab-tr {
+  animation: stab-tr 1s;
+}
 
-
-   /* animation-name: stab-tr;
+/* animation-name: stab-tr;
    animation-duration: 1s; */
 
-   @keyframes stab-tr {
-    0% {
-        right: -4px;
-        top: -4px;
-        animation-timing-function: ease-in;
-    }
-    15% {
-        right: -10px;
-        top: -10px;
-    }
-    100% {
-        right: -5px;
-        top: -5px;
-    }
+@keyframes stab-tr {
+  0% {
+    right: -4px;
+    top: -4px;
+    animation-timing-function: ease-in;
   }
+  15% {
+    right: -10px;
+    top: -10px;
+  }
+  100% {
+    right: -5px;
+    top: -5px;
+  }
+}
