--- a/src/Card.css
+++ b/src/Card.css
@@ -115,6 +115,22 @@ Original arrow / border colors
   background-color: var(--p2-bg-color);
 }
 
+/* need to select card */
+.card-select:before {
+  content: "select";
+  position: absolute;
+  color: white;
+  z-index: 9;
+  font-size: 22px;
+  font-family: "Helvetica";
+  /*background-color: #e0e0e070;*/
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  padding-top: 39%;
+  box-sizing: border-box;
+}
+
 /* shared styles for all arrow and arrow numbers */
 .arrow {
   width: 0;
